--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div>Hello, I am <span id='col_red'>Kartik Tiple</span></div>
             <div>A <span id='col_red'>Programmer</span> and <span id='col_red'>Web</span> Developer</div>
             <br>
-            <button class="aa"> <a href="./Kartik's Resume.pdf" id="resume" target="_blank"> MY RESUME</a></button>
+            <button class="aa"> <a href="./Kartik Resume.pdf" id="resume" target="_blank"> MY RESUME</a></button>
             <br><br>
           </div>
         </div>
